# anime-list

./: .env.dev  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
animes/: admin.py  models.py
animes/migrations/: 0001_initial.py
core/: settings.py  urls.py
